force-app/main/default/objects/Question__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Answer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>