force-app/main/default/objects/Question__c/fields/AnswersQtt__c.field-meta.xml
<CustomField>
    <fullName>AnswersQtt__c</fullName>
    <label>AnswersQtt</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>