force-app/main/default/objects/Question__c/fields/ExamExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExamExternalId__c</fullName>
    <label>Exam External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>