force-app/main/default/objects/Question__c/fields/IsAnswerQttShown__c.field-meta.xml
<CustomField>
    <fullName>IsAnswerQttShown__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsAnswerQttShown</label>
    <type>Checkbox</type>
</CustomField>