force-app/main/default/objects/Question__c/fields/uid__c.field-meta.xml
<CustomField>
    <fullName>uid__c</fullName>
    <externalId>true</externalId>
    <label>Uid</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>